tests/NormalTests/paczka1/fuzzy1/49028640.err
Error in line 4: a3DzhsHlyUS S803 11,3
Error in line 5: a3DzhsHlyUS A645 70,3
Error in line 9: a3DzhsHlyUS A110 39,7
Error in line 2: M8a A110 4,7
Error in line 25: KwSsJqYP S803 7,6
Error in line 27: KwSsJqYP A110 12,0
Error in line 12: CjRHh3tGL63 A110 348,9
